--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul class="main-nav js--main-nav">
                         <li><a href="#features">About us</a></li>
                         <li><a href="#works">How it works</a></li>
-                        <li><a href="#cities">Our citie</a></li>
+                        <li><a href="#cities">Our cities</a></li>
                         <li><a href="posetest.html">Sign up</a></li>
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
