--- a/posetest.html
+++ b/posetest.html
@@ -8,10 +8,10 @@
     <body>
         <img id = "thighs1" src="PoseIdeal/thighs2.gif" width="480px" height="360px">
         <img id = "thighs2" src="PoseIdeal/thighs3.gif" width="480px" height="360px">
-        <img id = "thighs3" src="PoseIdeal/thighs.gif" width="480px" height="360px">
-        <img id = "back1" src="PoseIdeal/backflex.gif" width="480px" height="360px">
-        <img id = "back2" src="PoseIdeal/touchtoes.gif" width="480px" height="360px">
-        <img id = "back3" src="PoseIdeal/easytouchtoes.gif" width="480px" height="360px">
+        <img id = "thighs3" src="PoseIdeal/kpop.gif" width="480px" height="360px">
+        <img id = "back1" src="PoseIdeal/jazz.gif" width="480px" height="360px">
+        <img id = "back2" src="PoseIdeal/hiphop.gif" width="480px" height="360px">
+        <img id = "back3" src="PoseIdeal/classical.gif" width="480px" height="360px">
         
         <img id = "thighs11" src="PoseImg/thighs2.jpg" width="480px" height="360px">
         <img id = "thighs22" src="PoseImg/thighs3.jpg" width="480px" height="360px">
