--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </nav>
             <div class="hero-text-box">
-                <h1>Goodbye Depression.<br>Hello healthy dance routines.</h1>
+                <h1>Goodbye Depression.<br>Hello healthy dance moves.</h1>
                 <a class="btn btn-full js--scroll-to-plans" href="#">I'm on board</a>
                 <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
             </div>
